@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 19-04-2006 fixed: Various python unicode label issues.
+ - 19-04-2006 fixed: Wordwrapping in textbox and label controls wasn't correct for multibyte characters.
  - 19-04-2006 fixed: [ 1471338 ] Input for IP-Adress sometimes wrong
  - 19-04-2006 fixed: When TTF fonts run out of memory, the character cache is cleared.  Should fix movies that develop corrupt subtitles after a while in 1080i.
  - 19-04-2006 fixed: DVD-ROM bookmark could not be edited from the GUI.
